@@ -23,6 +23,8 @@ The rules for this file:
  * 2.8.0
 
 Fixes
+ * set `n_parts` to the total number of frames being analyzed if
+   `n_parts` is bigger. (Issue #4685)
  * Catch higher dimensional indexing in GroupBase & ComponentBase (Issue #4647)
  * Do not raise an Error reading H5MD files with datasets like
    `observables/<particle>/<property>` (part of Issue #4598, PR #4615)
